# langgraph_course_1

./: .gitignore  README.md  pyproject.toml
8ea3b230-47e4-48ee-b6ad-b04e2861dbf6/: index_metadata.pickle
agentic_rag/: adaptive_rag.py  ingestion.py  rag.py  rough_work.ipynb  self_rag.py  state.py
agentic_rag/chains/: answer_grader.py  generation.py  hallucinator_grader.py  retrieval_grader.py  retriever.py  router_chain.py
agentic_rag/nodes/: generation_node.py  retrieval_grader_chain.py  retriever_chain.py  webSearchTool.py
react_agent/: Untitled.ipynb  nodes.py  react.py  state.py
reflection-agent/: Untitled.ipynb  chains.py  main.py
reflection-agent/.virtual_documents/: Untitled.ipynb
reflexion-agent/: chains.py  main.py  rough_work.ipynb  schemas.py  tool_executor.py
